--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
     <meta charset="utf-8">
-    <title>vuemusic2</title>
+    <title>VueMusic2</title>
   </head>
   <body>
     <div id="app"></div>
