--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/VueMusic2/dist/build.js"></script>
+    <!-- <script src="/VueMusic2/dist/build.js"></script> -->
+    <script src="/dist/build.js"></script>
   </body>
 </html>
